refactor: cors and host parametrization